<resources>
    <string name="app_name">খোঁজ</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_new_account">Create New Account</string>
    <string name="action_add_missing_person">Add Missing Person</string>
    <string name="action_user_profile">Account</string>
    <string name="button_search">Search</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_create_new_account_in_login">Create New Account</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA7yl8rY1RnzFIQ3IZF02obpuy6BzCfyWw</string>
    <string-array name="user_profile_item">
        <item>Profile Information</item>
        <item>Missing Person Reports</item>
        <item>Crime Reports</item>
        <item>Bookmarks</item>
    </string-array>
    <string-array name="filter_item">
        <item>Search By</item>
        <item>Name</item>
        <item>Location</item>
        <item>Age</item>
    </string-array>
    <string-array name="tabs">
        <item>All</item>
        <item>Found</item>
        <item>Lost</item>
        <item>Crime</item>
        <item>Location</item>
    </string-array>
    <string-array name="tabs_user">
        <item>Account Info</item>
        <item>Found  &amp; Lost</item>
        <item>Complain</item>


    </string-array>
    <string-array name="all">
        <item>All</item>
    </string-array>
    <string name="select">Select</string>
    <string-array name="complain_subject_short">
        <item>Select Subject</item>
        <item>পণ্য</item>
        <item>পরিবেশ</item>
        <item>অপরাধ</item>
        <item>চাহিদা</item>
    </string-array>
    <string name="complain_subject">Complain Subject</string>
    <string-array name="subject_ponno">
        <item>সকল</item>
        <item>দ্রব্যমূল্য</item>
        <item>নিম্নমানের খাদ্য ও প্রসাধনী</item>
        <item>দূষিত খাদ্য</item>
        <item>ভোজ্যতেল</item>
        <item>আয়োডিন বিষয়ক</item>
        <item>ভেজাল</item>
        <item>সকল</item>
        <item>পাটজাত দ্রব্য</item>
        <item>মেয়াদ উত্তীর্ণ পণ্য</item>
        <item>প্যাকেটজাত দ্রব্য</item>
        <item>ওজনে কম</item>
    </string-array>
    <string-array name="subject_porebesh">
        <item>সকল</item>
        <item>ভূমি ও জলাশয়</item>
        <item>বীজ ও সার</item>
        <item>মৎস</item>
        <item>পরিবহন ও যোগাযোগ</item>
        <item>ইটভাটা</item>
        <item>বিদ্যুৎ সংক্রান্ত</item>
    </string-array>
    <string-array name="subject_oporadh">
        <item>সকল</item>
        <item>মাদক</item>
        <item>ইভটিজিং</item>
        <item>বাল্যবিবাহ</item>
        <item>ধূমপান</item>
        <item>জুয়া</item>
        <item>এসিড সংক্রান্ত</item>
        <item>নির্বাচন</item>
    </string-array>
    <string-array name="subject_chahida">
        <item>সকল</item>
        <item>শিক্ষা সংক্রান্ত</item>
        <item>ঔষধ ও চিকিৎসা</item>
        <item>স্বাস্থ্য সংক্রান্ত</item>
        <item>এসিড সংক্রান্ত</item>
        <item>লাইসেন্স সংক্রান্ত</item>
        <item>দূষিত রক্ত</item>
    </string-array>
    <string-array name="division_bangladesh">
        <item>Select</item>
        <item>ঢাকা</item>
        <item>রাজশাহী</item>
        <item>চট্টগ্রাম</item>
        <item>খুলনা</item>
        <item>ময়মনসিংহ</item>
        <item>রংপুর</item>
        <item>সিলেট</item>
        <item>বরিশাল</item>
    </string-array>
    <string-array name="dhaka_division">
        <item>Select</item>
        <item>ঢাকা</item>
        <item>গাজীপুর</item>
        <item>টাঙ্গাইল</item>
        <item>গোপালগঞ্জ</item>
        <item>কিশোরগঞ্জ</item>
        <item>নারায়ণগঞ্জ</item>
        <item>নরসিংদী</item>
        <item>ফরিদপুর</item>
        <item>মাদারীপুর</item>
        <item>মানিকগঞ্জ</item>
        <item>মুন্সীগঞ্জ</item>
        <item>শরীয়তপুর</item>
        <item>রাজবাড়ী</item>
    </string-array>
    <string-array name="rajshahi_division">
        <item>Select</item>
        <item>রাজশাহী</item>
        <item>নওয়াবগঞ্জ</item>
        <item>জয়পুরহাট</item>
        <item>নওগাঁ</item>
        <item>নাটোর</item>
        <item>পাবনা</item>
        <item>বগুড়া</item>
        <item>সিরাজগঞ্জ</item>
    </string-array>
    <string-array name="chittagong_division">
        <item>Select</item>
        <item>চট্টগ্রাম</item>
        <item>কক্সবাজার</item>
        <item>কুমিল্লা</item>
        <item>খাগড়াছড়ি</item>
        <item>চাঁদপুর</item>
        <item>নোয়াখালী</item>
        <item>ফেনী</item>
        <item>বান্দরবান</item>
        <item>ব্রাহ্মণবাড়ীয়া</item>
        <item>রাঙ্গামাটি</item>
        <item>লক্ষ্মীপুর</item>
    </string-array>
    <string-array name="khulna_division">
        <item>Select</item>
        <item>খুলনা</item>
        <item>কুষ্টিয়া</item>
        <item>চুয়াডাঙ্গা</item>
        <item>ঝিনাইদহ</item>
        <item>নড়াইল</item>
        <item>বাগেরহাট</item>
        <item>মাগুরা</item>
        <item>মেহেরপুর</item>
        <item>যশোর</item>
        <item>সাতক্ষীরা</item>
    </string-array>
    <string-array name="mymensingh_division">
        <item>Select</item>
        <item>ময়মনসিংহ</item>
        <item>জামালপুর</item>
        <item>নেত্রকোনা</item>
        <item>শেরপুর</item>
    </string-array>
    <string-array name="rangpur_division">
        <item>Select</item>
        <item>রংপুর</item>
        <item>কুড়িগ্রাম</item>
        <item>গাইবান্ধা</item>
        <item>ঠাকুরগাঁও</item>
        <item>দিনাজপুর</item>
        <item>নীলফামারী</item>
        <item>পঞ্চগড়</item>
        <item>লালমনিরহাট</item>
    </string-array>
    <string-array name="sylhet_division">
        <item>Select</item>
        <item>সিলেট</item>
        <item>মৌলভীবাজার</item>
        <item>সুনামগঞ্জ</item>
        <item>হবিগঞ্জ</item>
    </string-array>
    <string-array name="barisal_division">
        <item>Select</item>
        <item>বরিশাল</item>
        <item>ঝালকাঠি</item>
        <item>পটুয়াখালী</item>
        <item>পিরোজপুর</item>
        <item>বরগুনা</item>
        <item>ভোলা</item>
    </string-array>
    <string-array name="dhake_city_copporation">
        <item>Select</item>
        <item>ঢাকা উত্তর সিটি কর্পোরেশন</item>
        <item>ঢাকা দক্ষিণ সিটি কর্পোরেশন</item>
        <item>গাজীপুর সিটি কর্পোরেশন</item>
        <item>নারায়ণগঞ্জ সিটি কর্পোরেশন</item>
    </string-array>
    <string-array name="rajshahi_city_corporation">
        <item>Select</item>
        <item>রাজশাহী সিটি কর্পোরেশন</item>
    </string-array>
    <string-array name="chittagong_city_corporation">
        <item>Select</item>
        <item>চট্টগ্রাম সিটি কর্পোরেশন</item>
        <item>কুমিল্লা সিটি কর্পোরেশন</item>
    </string-array>
    <string-array name="khulna_city_corporation">
        <item>Select</item>
        <item>খুলনা সিটি কর্পোরেশন</item>
    </string-array>
    <string-array name="mymensingh_city_corporation">
        <item>Select</item>
    </string-array>
    <string-array name="rangpur_city_corporation">
        <item>Select</item>
        <item>রংপুর সিটি কর্পোরেশন</item>
    </string-array>
    <string-array name="sylhet_city_corporation">
        <item>Select</item>
        <item>সিলেট সিটি কর্পোরেশন</item>
    </string-array>
    <string-array name="barisal_city_corporation">
        <item>Select</item>
        <item>বরিশাল সিটি কর্পোরেশন</item>
    </string-array>
    <string-array name="district_bangladesh">
        <item>All</item>
        <item>বরগুনা</item>
        <item>বরিশাল</item>
        <item>ভোলা</item>
        <item>ঝালকাঠি</item>
        <item>পটুয়াখালী</item>
        <item>পিরোজপুর</item>
        <item>বান্দরবান</item>
        <item>ব্রাহ্মণবাড়ীয়া</item>
        <item>চাঁদপুর</item>
        <item>চট্টগ্রাম</item>
        <item>কুমিল্লা</item>
        <item>কক্সবাজার</item>
        <item>ফেনী</item>
        <item>খাগড়াছড়ি</item>
        <item>লক্ষ্মীপুর</item>
        <item>নোয়াখালী</item>
        <item>রাঙ্গামাটি</item>
        <item>ঢাকা</item>
        <item>ফরিদপুর</item>
        <item>গাজীপুর</item>
        <item>গোপালগঞ্জ</item>
        <item>কিশোরগঞ্জ</item>
        <item>মাদারীপুর</item>
        <item>মানিকগঞ্জ</item>
        <item>মুন্সীগঞ্জ</item>
        <item>নারায়ণগঞ্জ</item>
        <item>নরসিংদী</item>
        <item>রাজবাড়ী</item>
        <item>শরীয়তপুর</item>
        <item>টাঙ্গাইল</item>
        <item>বাগেরহাট</item>
        <item>চুয়াডাঙ্গা</item>
        <item>যশোর</item>
        <item>ঝিনাইদহ</item>
        <item>খুলনা</item>
        <item>কুষ্টিয়া</item>
        <item>মাগুরা</item>
        <item>মেহেরপুর</item>
        <item>নড়াইল</item>
        <item>সাতক্ষিরা</item>
        <item>জামালপুর</item>
        <item>ময়মনসিংহ</item>
        <item>নেত্রকোনা</item>
        <item>শেরপুর</item>
        <item>বগুড়া</item>
        <item>জয়পুরহাট</item>
        <item>নওগাঁ</item>
        <item>নাটোর</item>
        <item>নওয়াবগঞ্জ</item>
        <item>পাবনা</item>
        <item>রাজশাহী</item>
        <item>সিরাজগঞ্জ</item>
        <item>দিনাজপুর</item>
        <item>গাইবান্ধা</item>
        <item>কুড়িগ্রাম</item>
        <item>লালমনিরহাট</item>
        <item>নীলফামারী</item>
        <item>পঞ্চগড়</item>
        <item>রংপুর</item>
        <item>ঠাকুরগাঁও</item>
        <item>হবিগঞ্জ</item>
        <item>মৌলভীবাজার</item>
        <item>সুনামগঞ্জ</item>
        <item>সিলেট</item>
    </string-array>
    <string-array name="d_dhaka">
        <item>All</item>
        <item>আদাবর</item>
        <item>আগারগাঁও</item>
        <item>বাড্ডা</item>
        <item>বংশাল</item>
        <item>বিমান বন্দর</item>
        <item>ক্যান্টনমেন্ট</item>
        <item>চকবাজার</item>
        <item>দক্ষিণ খান</item>
        <item>দারুস সালাম</item>
        <item>ধানমন্ডি</item>
        <item>ডেমরা</item>
        <item>কোতোয়ালী</item>
        <item>গেন্ডারিয়া</item>
        <item>গুলশান</item>
        <item>হাজারীবাগ</item>
        <item>যাত্রাবাড়ি</item>
        <item>কদমতলী</item>
        <item>কাফরুল</item>
        <item>কলাবাগান</item>
        <item>কামরাঙ্গী চর</item>
        <item>খিলক্ষেত</item>
        <item>খিলগাঁও</item>
        <item>লালবাগ</item>
        <item>মিরপুর</item>
        <item>মোহাম্মদপুর</item>
        <item>মতিঝিল</item>
        <item>নতুন বাজার</item>
        <item>পল্লবী</item>
        <item>পল্টন</item>
        <item>রমনা</item>
        <item>রামপুরা</item>
        <item>সবুজবাগ</item>
        <item>শাহবাগ</item>
        <item>শের-ই-বাংলা নগর</item>
        <item>শ্যামপুর</item>
        <item>সুত্রাপুর</item>
        <item>তেজগাঁও</item>
        <item>তুরাগ</item>
        <item>উত্তরা</item>
    </string-array>
    <string-array name="d_jamalpur">

        <item>All</item>
        <item>বকশীগঞ্জ</item>
        <item>দেওয়ানগঞ্জ</item>
        <item>ইসলামপুর</item>
        <item>জামালপুর সদর</item>
        <item>মাদারগঞ্জ</item>
        <item>মেলান্দহ</item>
        <item>সরিষাবাড়ি</item>

    </string-array>
    <string name="add_image">Add Image</string>
    <string name="create_account_name">name</string>
    <string name="create_account_email">e-mail</string>
    <string name="phone_number">phone-Number</string>
</resources>