<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.onenation.oneworld.mahfuj75.searchperson.activity.MissingPersonActivity">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="Search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/action_login"
        android:icon="@drawable/ic_person_black_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_user_profile"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/action_user_profile" />
    <item
        android:id="@+id/action_create_newAccount"
        android:orderInCategory="100"
        android:title="@string/action_new_account"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_missing"
        android:orderInCategory="100"
        android:title="@string/action_add_missing_person"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="logout"
        app:showAsAction="never"
        android:visible="false"/>

</menu>
